--- a/ad.ipynb
+++ b/ad.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2457,11 +2457,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s=[df.loc[0:9,[\"Name\"]]]"
+    "\n",
+    " \n",
+    "s=df.loc[0:9,'Name']"
    ]
   },
   {
@@ -2497,26 +2499,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[                                                Name\n",
-       " 0                            Braund, Mr. Owen Harris\n",
-       " 1  Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
-       " 2                             Heikkinen, Miss. Laina\n",
-       " 3       Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
-       " 4                           Allen, Mr. William Henry\n",
-       " 5                                   Moran, Mr. James\n",
-       " 6                            McCarthy, Mr. Timothy J\n",
-       " 7                     Palsson, Master. Gosta Leonard\n",
-       " 8  Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)\n",
-       " 9                Nasser, Mrs. Nicholas (Adele Achem)]"
+       "0                              Braund, Mr. Owen Harris\n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
+       "2                               Heikkinen, Miss. Laina\n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
+       "4                             Allen, Mr. William Henry\n",
+       "5                                     Moran, Mr. James\n",
+       "6                              McCarthy, Mr. Timothy J\n",
+       "7                       Palsson, Master. Gosta Leonard\n",
+       "8    Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)\n",
+       "9                  Nasser, Mrs. Nicholas (Adele Achem)\n",
+       "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2527,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2536,14 +2538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_2544\\781699545.py:1: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_19880\\781699545.py:1: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
       "  pd.Series(index=l)\n"
      ]
     },
@@ -2563,7 +2565,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2574,21 +2576,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Length of values (1) does not match length of index (10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[100], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pd\u001b[39m.\u001b[39;49mSeries(\u001b[39mlist\u001b[39;49m(s),index\u001b[39m=\u001b[39;49ml)\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\lib\\site-packages\\pandas\\core\\series.py:461\u001b[0m, in \u001b[0;36mSeries.__init__\u001b[1;34m(self, data, index, dtype, name, copy, fastpath)\u001b[0m\n\u001b[0;32m    459\u001b[0m     index \u001b[39m=\u001b[39m default_index(\u001b[39mlen\u001b[39m(data))\n\u001b[0;32m    460\u001b[0m \u001b[39melif\u001b[39;00m is_list_like(data):\n\u001b[1;32m--> 461\u001b[0m     com\u001b[39m.\u001b[39;49mrequire_length_match(data, index)\n\u001b[0;32m    463\u001b[0m \u001b[39m# create/copy the manager\u001b[39;00m\n\u001b[0;32m    464\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, (SingleBlockManager, SingleArrayManager)):\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\lib\\site-packages\\pandas\\core\\common.py:571\u001b[0m, in \u001b[0;36mrequire_length_match\u001b[1;34m(data, index)\u001b[0m\n\u001b[0;32m    567\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    568\u001b[0m \u001b[39mCheck the length of data matches the length of the index.\u001b[39;00m\n\u001b[0;32m    569\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    570\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(data) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(index):\n\u001b[1;32m--> 571\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    572\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mLength of values \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    573\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(data)\u001b[39m}\u001b[39;00m\u001b[39m) \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    574\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mdoes not match length of index \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    575\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(index)\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    576\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: Length of values (1) does not match length of index (10)"
-     ]
+     "data": {
+      "text/plain": [
+       "a                              Braund, Mr. Owen Harris\n",
+       "b    Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
+       "c                               Heikkinen, Miss. Laina\n",
+       "d         Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
+       "e                             Allen, Mr. William Henry\n",
+       "f                                     Moran, Mr. James\n",
+       "g                              McCarthy, Mr. Timothy J\n",
+       "h                       Palsson, Master. Gosta Leonard\n",
+       "i    Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)\n",
+       "j                  Nasser, Mrs. Nicholas (Adele Achem)\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
