--- a/pandsmarge.ipynb
+++ b/pandsmarge.ipynb
@@ -1747,6 +1747,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Name  Age    Address Qualification\n",
+      "0     Jai   27     Nagpur           Msc\n",
+      "1  Princi   24     Kanpur            MA\n",
+      "2  Gaurav   22  Allahabad           MCA\n",
+      "3    Anuj   32    Kannuaj           Phd\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Qualification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anuj</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Kannuaj</td>\n",
+       "      <td>Phd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gaurav</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Allahabad</td>\n",
+       "      <td>MCA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Princi</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Kanpur</td>\n",
+       "      <td>MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jai</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Nagpur</td>\n",
+       "      <td>Msc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name  Age    Address Qualification\n",
+       "3    Anuj   32    Kannuaj           Phd\n",
+       "2  Gaurav   22  Allahabad           MCA\n",
+       "1  Princi   24     Kanpur            MA\n",
+       "0     Jai   27     Nagpur           Msc"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i,j in df.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
